# medgemma

./: .env.example  .gitignore  Dockerfile  LICENSE  README.md  WARP.md  dataset.md  docker-compose.yml  medgemma_implementation_plan.md  pyproject.toml
.github/workflows/: test.yml
config/: deployment.yaml  medai_config.yaml  mlflow_config.yaml  modal_config.yaml  models.yaml  pipeline.yaml  ray_cluster.yaml  ray_modal_job.yaml  training.yaml
config/deepspeed/: ds_config_zero2.json  ds_config_zero3.json
config/hydra/: config.yaml
docker/: entrypoint.sh  training.Dockerfile
docker/nginx/: generate-certs.sh  nginx.conf
docker/postgres/: init.sql
docker/prometheus/: alert.rules.yml  prometheus.yml
docs/: ALGORITHMS.md  ARCHITECTURE_DIAGRAMS.md  FINETUNING_AND_INFERENCE_OPTIMIZATION.md  HIPAA_COMPLIANCE.md  PRODUCTION_SETUP.md  README.md  SECURITY_ASSESSMENT_REPORT.md  SETUP_GUIDE.md  SYSTEM_DESIGN.md  agents.md  architecture.md
docs/adr/: ADR-001-multi-agent-framework.md  ADR-002-state-persistence.md  ADR-003-inference-backend.md  ADR-004-training-strategy.md  ADR-005-guardrails-architecture.md  ADR-006-configuration-management.md  README.md
docs/api/: communication.md  orchestrator.md  workflow.md
docs/deployment/: MODAL_INTEGRATION.md  docker.md
docs/guides/: configuration.md  gpu_inference.md  persistence.md  quickstart.md  testing.md
docs/operations/: INFERENCE_GUIDE.md  PRODUCTION_DEPLOYMENT.md  TRAINING_GUIDE.md
frontend/: Dockerfile  jest.config.js  jest.setup.ts  next.config.js  package-lock.json  package.json  tailwind.config.ts  tsconfig.json  tsconfig.tsbuildinfo
medai_compass/: __init__.py
medai_compass/agents/: __init__.py
medai_compass/api/: __init__.py  guardrails.py  main.py  rag.py
medai_compass/benchmarking/: __init__.py  benchmark.py  inference.py  load_test.py  pipeline.py  resource.py  throughput.py
medai_compass/config/: __init__.py  hydra_config.py  settings.py
medai_compass/data/: __init__.py  ray_data_pipeline.py
medai_compass/evaluation/: __init__.py  ai_evaluation.py  benchmarks.py  drift.py  fairness.py  inference_benchmarks.py  metrics.py  optimization_quality_gates.py  safety_eval.py  training_benchmarks.py
medai_compass/guardrails/: __init__.py  escalation.py  input_rails.py  nemo_integration.py  output_rails.py  phi_detection.py  uncertainty.py
medai_compass/inference/: __init__.py  optimized.py  ray_serve_deployment.py  strategy_selector.py
medai_compass/modal/: __init__.py  app.py  client.py  data_download.py  evaluation_app.py  training_app.py
medai_compass/models/: __init__.py  cxr_foundation.py  inference_service.py  medgemma.py  path_foundation.py
medai_compass/monitoring/: __init__.py  alerting.py  drift_detector.py  performance_monitor.py  retraining_trigger.py
medai_compass/optimization/: __init__.py  analysis.py  ray_tune_integration.py  search_space.py
medai_compass/orchestrator/: __init__.py  master.py
medai_compass/pipelines/: __init__.py  __main__.py  cli.py  deployment_pipeline.py  evaluation_pipeline.py  lora_trainer.py  mlflow_integration.py  phi_detection.py  quality.py  ray_pipeline.py  tokenization.py  training_pipeline.py  validation.py  versioning.py
medai_compass/rag/: __init__.py  embeddings.py  loaders.py  pipeline.py  retriever.py  vector_store.py
medai_compass/security/: __init__.py  audit.py  auth.py  contracts.py  encryption.py  hipaa.py  penetration.py
medai_compass/serving/: __init__.py  ab_testing.py  canary.py  health.py  metrics.py  models.py  ray_serve_app.py  rollback.py
medai_compass/synthetic/: __init__.py  base.py  dialogue_generator.py  diversity.py  image_generator.py  quality_assurance.py  structured_generator.py  text_generator.py  versioning.py
medai_compass/tracing/: __init__.py  instrumentation.py  tracer.py
medai_compass/training/: __init__.py  callbacks.py  checkpoint_manager.py  data_pipeline.py  metrics.py  model_selector.py  optimized.py  pipeline.py  ray_trainer.py  strategy_selector.py
medai_compass/tuning/: __init__.py  asha_tuner.py  hyperband_tuner.py  pbt_tuner.py  runner.py  trainable.py  tuners.py  utils.py
medai_compass/utils/: __init__.py  data_pipeline.py  dataset_downloader.py  datasets.py  dicom.py  escalation_store.py  fhir.py  gpu.py  logging.py  medasr.py  persistence.py  resilience.py
medai_compass/workers/: __init__.py  celery.py  download_tasks.py  inference_tasks.py  ingestion_tasks.py  minio_client.py
medai_compass/workflows/: __init__.py  actors.py  ray_actors.py  training_workflow.py
models/: README.md
models/cxr_foundation/: config.pbtxt
models/medgemma_27b/: config.pbtxt
models/medgemma_4b/: config.pbtxt
notebooks/: hp_analysis.ipynb
scripts/: download_datasets.py  generate_secrets.py  ray_modal_train.py  setup_infrastructure.sh  setup_modal.py  start_mlflow_server.sh  start_ray_cluster.sh  test_physionet.py  verify_all_algorithms_modal.py  verify_connections.py  verify_inference_kernels.py  verify_inference_kernels_modal.py  verify_production.py  verify_training_algorithms.py
tests/: conftest.py  test_advanced_training.py  test_ai_evaluation.py  test_api.py  test_api_escalations.py  test_async_processing.py  test_benchmarks.py  test_communication_agent.py  test_data_pipeline.py  test_data_validation.py  test_datasets_medasr.py  test_deployment_pipeline.py  test_diagnostic_agent.py  test_distributed_training.py  test_e2e_integration.py  test_encryption.py  test_evaluation.py  test_evaluation_pipeline.py  test_guardrails_api.py  test_guardrails_escalation.py  test_guardrails_io.py  test_guardrails_phi.py  test_guardrails_uncertainty.py  test_hydra_config.py  test_hyperparameter_tuning.py  test_inference_service.py  test_infrastructure.py  test_kernel_optimizations.py  test_modal_client.py  test_modal_integration.py  test_models_medgemma.py  test_models_path.py  test_monitoring_alerting.py  test_monitoring_drift.py  test_monitoring_performance.py  test_monitoring_retraining.py  test_nemo_guardrails.py  test_optimized_inference.py  test_optimized_training.py  test_orchestrator.py  (+25 more)
(+108 files in other folders)
