[project]
name = "medai-compass"
version = "0.1.0"
description = "Production-Grade Multi-Agent Medical AI System with MedGemma"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "Apache-2.0"}
authors = [
    {name = "MedAI Compass Team"}
]
keywords = ["medical-ai", "medgemma", "healthcare", "multi-agent"]

dependencies = [
    # Core ML/AI
    "torch>=2.0.0",
    "transformers>=4.40.0",
    "accelerate>=0.28.0",
    "bitsandbytes>=0.42.0",
    "peft>=0.10.0",
    # Agent Frameworks
    "langgraph>=0.2.0",
    "langchain>=0.1.0",
    "crewai>=0.28.0",
    "pyautogen>=0.2.0",
    # Medical/DICOM
    "pydicom>=2.4.0",
    "fhirclient>=4.1.0",
    # API & Web
    "fastapi>=0.110.0",
    "uvicorn>=0.27.0",
    "pydantic>=2.6.0",
    # Database
    "sqlalchemy>=2.0.0",
    "asyncpg>=0.29.0",
    "redis>=5.0.0",
    # Security
    "cryptography>=42.0.0",
    "pyjwt>=2.8.0",
    # Utilities
    "numpy>=1.26.0",
    "pandas>=2.0.0",
    "pillow>=10.0.0",
    "httpx>=0.27.0",
    "pyyaml>=6.0.0",
    "python-dotenv>=1.0.0",
    "scipy>=1.15.3",
    "psutil>=5.9.0",
    # HuggingFace Hub
    "huggingface-hub>=0.20.0",
    # Celery for background tasks
    "celery[redis]>=5.3.0",
    # MinIO client
    "minio>=7.2.0",
    "modal>=1.3.0.post1",
]

[project.optional-dependencies]
dev = [
    # Testing
    "pytest>=8.0.0",
    "pytest-cov>=4.1.0",
    "pytest-asyncio>=0.23.0",
    "pytest-mock>=3.12.0",
    "hypothesis>=6.98.0",
    
    # Code Quality
    "ruff>=0.2.0",
    "mypy>=1.8.0",
    "pre-commit>=3.6.0",
    
    # Documentation
    "mkdocs>=1.5.0",
    "mkdocs-material>=9.5.0",
]

evaluation = [
    "scikit-learn>=1.4.0",
    "rouge-score>=0.1.2",
    "bert-score>=0.3.13",
    "datasets>=2.17.0",
    "evaluate>=0.4.1",
]

# Triton serving - platform-specific dependencies
serving = [
    # Full tritonclient with perf-analyzer on Linux
    "tritonclient[all]>=2.42.0; sys_platform == 'linux'",
    # HTTP/gRPC only on macOS (perf-analyzer is Linux-only)
    "tritonclient[http,grpc]>=2.42.0; sys_platform == 'darwin'",
    # HTTP/gRPC only on Windows
    "tritonclient[http,grpc]>=2.42.0; sys_platform == 'win32'",
    # Ray Serve for model deployment (Phase 7)
    "ray[serve]>=2.10.0",
    # Prometheus client for metrics
    "prometheus-client>=0.19.0",
]

# Monitoring & Observability (Phase 8 & 9)
monitoring = [
    "alibi-detect>=0.11.0",                 # Drift detection (fully integrated)
    "slack-sdk>=3.21.0",                    # Slack notifications (optional via env var)
    "aiohttp>=3.9.0",                       # Async HTTP for PagerDuty
    # OpenTelemetry (Phase 9)
    "opentelemetry-api>=1.22.0",            # Core tracing API
    "opentelemetry-sdk>=1.22.0",            # SDK implementation
    "opentelemetry-exporter-otlp>=1.22.0",  # OTLP exporter for Jaeger/Grafana
    "opentelemetry-instrumentation-fastapi>=0.43b0",   # FastAPI auto-instrumentation
    "opentelemetry-instrumentation-redis>=0.43b0",     # Redis auto-instrumentation
    "opentelemetry-instrumentation-sqlalchemy>=0.43b0", # SQLAlchemy auto-instrumentation
    "opentelemetry-instrumentation-httpx>=0.43b0",     # HTTPX auto-instrumentation
    # Load testing (Phase 9)
    "locust>=2.24.0",                       # Load testing framework
]

# vLLM serving (Linux only - requires CUDA)
vllm = [
    "vllm>=0.3.0; sys_platform == 'linux'",
]

# Modal cloud GPU support (optional - application works without this)
modal = [
    "modal>=0.55.0",
]

# NeMo Guardrails support
guardrails = [
    "nemoguardrails>=0.9.0",
]

# Training infrastructure (Ray, MLflow, DeepSpeed)
training = [
    # Ray ecosystem (2.10+ supports Python 3.12)
    "ray[train,tune,data]>=2.10.0",
    # Experiment tracking
    "mlflow>=2.10.0",
    # Distributed training (Linux/CUDA only)
    "deepspeed>=0.13.0; sys_platform == 'linux'",
    # Data handling
    "datasets>=2.17.0",
    "safetensors>=0.4.0",
    # Data pipeline dependencies (Phase 2)
    "dvc>=3.40.0",                          # Data versioning
    "dvc-s3>=3.0.0",                        # S3 remote storage support
    "great-expectations>=0.18.0",           # Data quality (optional, for advanced checks)
    "pandera>=0.18.0",                      # Schema validation
    # Phase 3: Training Pipeline
    "trl>=0.7.0",                           # SFTTrainer for instruction tuning
    "flash-attn>=2.5.0; sys_platform == 'linux'",  # Flash Attention 2 (Linux/CUDA only)
    "evaluate>=0.4.1",                      # Evaluation metrics
    "tensorboard>=2.15.0",                  # Training visualization
    "tensorboardx>=2.6.0",                  # TensorBoard X for additional logging
    # Phase 4: Hyperparameter Optimization
    "optuna>=3.5.0",                        # Bayesian optimization
    "optuna-integration>=3.6.0",            # MLflow/Ray integrations
    "plotly>=5.18.0",                       # HP visualization
    "hiplot>=0.1.33",                       # High-dimensional HP visualization
    "kaleido>=0.2.1",                       # Plotly static image export
    # Jupyter notebook support
    "ipywidgets>=8.0.0",                    # Interactive widgets for notebooks
    "jupyter>=1.0.0",                       # Jupyter notebook support
    # Phase 5: Synthetic Data Pipeline
    "faker>=20.0.0",                        # Fake data generation
    "sdv>=1.8.0",                           # Synthetic Data Vault
    "ctgan>=0.9.0",                         # Conditional tabular GAN
    "diffusers>=0.25.0",                    # Diffusion models for image synthesis
    "tqdm>=4.66.0",                         # Progress tracking
    "jsonlines>=4.0.0",                     # JSON Lines file handling
]

# All optional dependencies
all = [
    "medai-compass[dev,evaluation,serving,monitoring,modal,guardrails,training]",
]

# All + vLLM (Linux/CUDA only)
all-cuda = [
    "medai-compass[all,vllm]",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
asyncio_mode = "auto"
addopts = "-v --tb=short"
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
    "gpu: marks tests that require GPU",
]

[tool.coverage.run]
source = ["medai_compass"]
omit = ["tests/*", "*/__pycache__/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
